# bioportal-mcp

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/bioportal_mcp/: main.py
