[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioportal-mcp"
version = "0.1.0"
description = "A model context protocol (MCP) for interacting with Bioportal"
readme = "README.md"
authors = [
    {name = "Justin Reese", email = "justaddcoffee@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.7.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
  "pytest",
  "black",
]

[project.urls]
"Homepage" = "https://github.com/justaddcoffee/bioportal-mcp"
"Bug Tracker" = "https://github.com/justaddcoffee/bioportal-mcp/issues"

[project.scripts]
bioportal-mcp = "bioportal_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bioportal_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]